[package]
name = "enhance-ssr-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
extism = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
